# csn-tray

./: .gitignore  CMakeLists.txt  LICENCE  README  README.md  main.c
include/: conf.h  csn_api.h  icon.h  tray.h
src/: conf.c  csn_api.c  tray.c
